--- a/web/app/themes/schnapps/parts/header.html
+++ b/web/app/themes/schnapps/parts/header.html
@@ -1,5 +1,9 @@
-<div class="py-4 text-xl mt-8 translate-y-2 test">
-  <div class="container">
-    <!-- wp:template-part {"slug": "logo"} /-->
+<!-- wp:group -->
+<div class="py-4 mt-8 text-xl wp-block-group test">
+  <!-- wp:group -->
+  <div class="container wp-block-group">
+    <!-- wp:template-part {"slug": "logo", "lock": {"remove": true}} /-->
   </div>
+  <!-- /wp:group -->
 </div>
+<!-- /wp:group -->
