feat: header nav

--- a/web/app/themes/schnapps/parts/header.html
+++ b/web/app/themes/schnapps/parts/header.html
@@ -2,7 +2,12 @@
 <div class="py-4 mt-8 text-xl wp-block-group test">
   <!-- wp:group -->
   <div class="container wp-block-group">
-    <!-- wp:template-part {"slug": "logo", "lock": {"remove": true}} /-->
+    <!-- wp:group -->
+    <div class="flex wp-block-group">
+      <!-- wp:template-part {"slug": "logo", "lock": {"remove": true}} /-->
+      <!-- wp:giantpeach/headernavigation {"name":"giantpeach/headernavigation","data":{},"mode":"preview"} /-->
+    </div>
+    <!-- /wp:group -->
   </div>
   <!-- /wp:group -->
 </div>
