--- a/web/app/themes/schnapps/parts/logo.html
+++ b/web/app/themes/schnapps/parts/logo.html
@@ -1,1 +1,1 @@
-<!-- wp:giantpeach/logo {"name":"giantpeach/logo","data":{"field_64916bd51f673":"164","field_6491a27b235a8":""},"mode":"preview"} /-->
+<!-- wp:giantpeach/logo {"name":"giantpeach/logo","data":{"logo":164,"_logo":"field_64916bd51f673","mobile_logo":"","_mobile_logo":"field_6491a27b235a8"},"mode":"preview"} /-->
