--- a/web/app/themes/schnapps/parts/header.html
+++ b/web/app/themes/schnapps/parts/header.html
@@ -1,5 +1,5 @@
 <!-- wp:group -->
-<div class="py-4 mt-8 text-xl wp-block-group test">
+<div class="py-4 mt-8 text-xl wp-block-group test" x-data="{menuOpen: false}">
   <!-- wp:group -->
   <div class="container wp-block-group">
     <!-- wp:group -->
