Updated Footer & Header

--- a/web/app/themes/schnapps/parts/header.html
+++ b/web/app/themes/schnapps/parts/header.html
@@ -1,14 +1,1 @@
-<!-- wp:group -->
-<div class="py-4 mt-8 text-xl wp-block-group test" x-data="{menuOpen: false}">
-  <!-- wp:group -->
-  <div class="container wp-block-group">
-    <!-- wp:group -->
-    <div class="flex wp-block-group">
-      <!-- wp:template-part {"slug": "logo", "lock": {"remove": true}} /-->
-      <!-- wp:giantpeach/headernavigation {"name":"giantpeach/headernavigation","data":{},"mode":"preview"} /-->
-    </div>
-    <!-- /wp:group -->
-  </div>
-  <!-- /wp:group -->
-</div>
-<!-- /wp:group -->
+<!-- wp:giantpeach/header {"name":"giantpeach/header","data":{},"mode":"preview"} /-->
